Revert "Print code patch on firefox version issues."
This reverts commit bc5cbfcdca257c7b1715342a7a31a2129e127464.

--- a/src/web/themes/custom/bcgov_career/src/sass/_print.scss
+++ b/src/web/themes/custom/bcgov_career/src/sass/_print.scss
@@ -2,33 +2,6 @@
     * {
         -webkit-transition: none !important;
         transition: none !important;
-        -webkit-print-color-adjust: exact !important;
-        print-color-adjust: exact !important;
-    }
-
-
-    @-moz-document url-prefix() {
-        .myResultHeading .row.rh {
-            position: relative;
-            width: 100% !important;
-            margin: 20px 40px;
-
-            background-color: white!important;
-        }
-
-        #myResult {
-            margin-left: 20px !important;
-
-            .career-content-item-inner .title {
-               margin-left: -40px;
-            }
-        }
-
-        .results-main-block {
-            &:after {
-           display: none !important;
-            }
-        }
     }
 
     .page-node-type-learning-styles-quiz  {
@@ -38,19 +11,6 @@
 
     }
 
-    .results-main-block {
-       &:after {
-        content: "";
-        width:100%;
-        display: flex;
-        height: 3px;
-        background-color: black;
-       }
-        [class*="col-"] {
-            padding: 0;
-        }
-    }
-
     .ui-tooltip {
         display: none;
     }
@@ -58,26 +18,11 @@
     .myResultHeading .result-heading {
         display: block;
         position: static;
-        margin: 0 auto 15px;
-
-        h2 {
-            text-align: left !important;
-            margin: 0;
-        }
-
-        li {
-            font-family: 'BC Sans Regular', sans-serif;
-            font-weight: 400;
-            font-style: normal;
-            font-size: 1.6rem;
-            line-height: 2.0rem;
-            color: #333333;
-        }
+        margin: 0 auto;
     }
     .myResultHeading .row {
         margin: 0;
         display: block!important;
-
         .col-8 {
             display: block!important;
             position: static!important;
@@ -241,6 +186,7 @@
                 background: #f2f2f2 !important;
             }
             .title-description {
+                font-size: 20px;
                 strong {
                     font-weight: normal!important;
                 }
@@ -295,6 +241,7 @@
     }
 
     .compare-career-main-wrapper .career-content-compare .career-content-item:not(.col) {
+        max-height: 350px;
         float: left;
         max-width: 575px;
         clear: both;
@@ -302,7 +249,7 @@
         margin-left: 0px;
     }
     .career-content-main-wrapper .career-content-item.active {
-
+        max-height: 350px;
         float: left;
         max-width: 575px;
         clear: both;
@@ -352,7 +299,8 @@
                 height: auto;
                 .title {
                     min-height: auto;
-                    padding: 0;
+                    padding: 0 0 0px;
+                    left: -40px;
                     background: transparent !important;
                     p {
                         color: #333333;
@@ -407,7 +355,7 @@
             .block-system-main-block {
                 &:not(.no-border-block) {
                     border: 0;
-                   // border-bottom: 5px solid rgba(51, 51, 51, 1) !important;
+                    border-bottom: 5px solid rgba(51, 51, 51, 1) !important;
                 }
                 &#block-bcgov-career-content.results-main-block {
                     padding-top: 0;
